# moa-cli

./: .gitignore  CLAUDE.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
backlog/: !README.md  002-response-anonymization.md  004-collaboration-modes.md  005-model-mapping.md  006-vote-mode.md  007-agent-skill.md  008-persistent-config.md  009-readonly-default-yolo.md  010-live-connection-check.md  011-per-provider-effort-config.md  012-run-telemetry.md  013-read-only-mode.md  014-stale-permission-docs.md  015-release-ci-gate.md  016-execution-test-coverage.md  017-dedup-provider-assignment-parsing.md  018-single-config-load.md
backlog/archive/: 001-provider-roster.md  003-self-exclusion.md  004-collaboration-modes.md  008-persistent-config.md  009-readonly-default-yolo.md  011-per-provider-effort-config.md
demo/: NOTES.md  _engine.py  ask.py  ask.tape  debate.py  debate.tape  distill.py  distill.tape
docs/: cli-permission-modes.md  configuration.md  debate.md  releasing.md
plans/: 001-cancel-provider-processes.md  002-truthful-workflow-exits.md  003-selected-synthesizer.md  004-module-boundary-tests.md  005-docs-and-version-alignment.md  README.md
skills/moa/: SKILL.md
src/moa_cli/: __init__.py  cli.py  config.py  execution.py  output.py  providers.py  status.py  workflows.py
tests/: conftest.py  test_cli.py  test_config.py  test_moa.py  test_output.py  test_providers.py  test_status.py
